--- a/app/src/main/res/layout/screen_activity.xml
+++ b/app/src/main/res/layout/screen_activity.xml
@@ -12,26 +12,13 @@
         style="@style/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:textSize="12sp"
-                android:textStyle="normal|bold" />
-
-            <ua.bios.mvvm.viewmodel.CalculatorScreen
+            <ua.bios.CalculatorScreen
                 android:id="@+id/screen"
                 style="@style/screen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:setFont="@{`fonts/Calculator.ttf`}"
-                app:setText="@{display.value}"/>
-        </FrameLayout>
+                app:setFont="@{`fonts/Calculator.otf`}"
+                app:addText="@{display.value}"
+                app:setText="@{display.zero}" />
     </LinearLayout>
 </layout>
