--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="CalculatorScreen">
+        <attr name="addText" format="string" />
         <attr name="setText" format="string" />
         <attr name="setFont" format="string" />
+        <attr name="delete" format="integer" />
     </declare-styleable>
 </resources>
