--- a/app/src/main/res/layout/keyboard_activity.xml
+++ b/app/src/main/res/layout/keyboard_activity.xml
@@ -2,8 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
-            name="buttonHandlers"
-            type="ua.bios.mvvm.viewmodel.ButtonHandlers" />
+            name="keykeyboard"
+            type="ua.bios.mvvm.viewmodel.CalculatorImpl" />
     </data>
 
     <LinearLayout
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="GT"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/rate"
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="RATE"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/tax_minus"
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="TAX-"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/tax_plus"
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="TAX+"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
         </LinearLayout>
 
         <LinearLayout
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="%"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/square_root"
@@ -68,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="√x"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <ImageButton
                 android:id="@+id/backspace"
@@ -80,7 +80,7 @@
                 android:padding="10dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/backspace"
-                android:onClick="@{buttonHandlers.onClickBackspace}" />
+                android:onClick="@{keykeyboard.onClickBackspace}" />
 
             <Button
                 android:id="@+id/reset"
@@ -88,7 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="C"
-                android:onClick="@{buttonHandlers.onClickClear}" />
+                android:onClick="@{keykeyboard.onClickClear}" />
         </LinearLayout>
 
         <LinearLayout
@@ -102,7 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="MC"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/mr"
@@ -110,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="MR"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/m_minus"
@@ -118,7 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="M-"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/m_plus"
@@ -126,7 +126,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="M+"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
         </LinearLayout>
 
         <LinearLayout
@@ -140,7 +140,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="7"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/eight"
@@ -148,7 +148,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="8"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/nine"
@@ -156,7 +156,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="9"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/divide"
@@ -164,7 +164,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="÷"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
         </LinearLayout>
 
         <LinearLayout
@@ -178,7 +178,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="4"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/five"
@@ -186,7 +186,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="5"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/six"
@@ -194,7 +194,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="6"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/multiply"
@@ -202,7 +202,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="×"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
         </LinearLayout>
 
         <LinearLayout
@@ -216,7 +216,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="1"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
 
             <Button
@@ -225,7 +225,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="2"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/tree"
@@ -233,7 +233,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="3"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/subtract"
@@ -241,7 +241,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="-"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
         </LinearLayout>
 
         <LinearLayout
@@ -255,7 +255,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="."
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/zero"
@@ -263,7 +263,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="0"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/equal"
@@ -271,7 +271,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="="
-                android:onClick="@{buttonHandlers.onClickEquals}" />
+                android:onClick="@{keykeyboard.onClickEquals}" />
 
             <Button
                 android:id="@+id/plus"
@@ -279,7 +279,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="+"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
         </LinearLayout>
 
         <LinearLayout
@@ -293,7 +293,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="+/-"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/double_zero"
@@ -301,7 +301,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="00"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/left_parenthesis"
@@ -309,7 +309,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="("
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
 
             <Button
                 android:id="@+id/right_parenthesis"
@@ -317,7 +317,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text=")"
-                android:onClick="@{buttonHandlers.onClickButton}" />
+                android:onClick="@{keykeyboard.onClickButton}" />
         </LinearLayout>
     </LinearLayout>
 </layout>
