--- a/app/src/main/res/layout/screen_activity.xml
+++ b/app/src/main/res/layout/screen_activity.xml
@@ -2,12 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-            name="display"
-            type="ua.bios.mvvm.viewmodel.Display" />
-    </data>
-
     <LinearLayout
         style="@style/layout"
         android:layout_width="match_parent"
@@ -17,8 +11,6 @@
                 style="@style/screen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:setFont="@{`fonts/Calculator.otf`}"
-                app:addText="@{display.value}"
-                app:setText="@{display.zero}" />
+                app:setFont="@{`fonts/Calculator.otf`}" />
     </LinearLayout>
 </layout>
