--- a/app/src/main/res/layout/screen_activity.xml
+++ b/app/src/main/res/layout/screen_activity.xml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
         <variable
             name="grandTotalScreen"
             type="ua.bios.mvvm.viewmodel.BindableGrandTotalScreen" />
+
+        <variable
+            name="calculatorScreenHandler"
+            type="ua.bios.mvvm.viewmodel.CalculatorScreenHandler" />
     </data>
 
     <LinearLayout
         style="@style/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/gtScreen"
                 style="@style/gtScreen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@{grandTotalScreen.activate ? @string/app_gt_screen : ``}"/>
+                android:text="@{grandTotalScreen.activate ? @string/app_gt_screen : ``}" />
 
             <ua.bios.display.CalculatorScreen
                 android:id="@+id/screen"
                 style="@style/screen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onTextChanged="@{calculatorScreenHandler.onTextChanged}"
                 app:setFont="@{`fonts/Calculator.otf`}" />
         </FrameLayout>
     </LinearLayout>
