--- a/app/src/main/res/layout/screen_activity.xml
+++ b/app/src/main/res/layout/screen_activity.xml
@@ -5,7 +5,11 @@
     <data>
         <variable
             name="grandTotalScreen"
-            type="ua.bios.mvvm.viewmodel.BindableGrandTotalScreen" />
+            type="ua.bios.mvvm.viewmodel.GrandTotalViewModel" />
+
+        <variable
+            name="taxRateScreen"
+            type="ua.bios.mvvm.viewmodel.TaxRateViewModel" />
 
         <variable
             name="calculatorScreenHandler"
@@ -21,12 +25,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/gtScreen"
                 style="@style/gtScreen"
-                android:layout_width="match_parent"
+                android:layout_width="20dip"
                 android:layout_height="match_parent"
                 android:text="@{grandTotalScreen.activate ? @string/app_gt_screen : ``}" />
+
+            <TextView
+                android:id="@+id/rateScreen"
+                style="@style/rateScreen"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@{@string/app_tax_rate + `(` + taxRateScreen.value +`)`}" />
+            </LinearLayout>
 
             <ua.bios.display.CalculatorScreen
                 android:id="@+id/screen"
