--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,11 @@
         <item name="android:padding">2dp</item>
     </style>
 
+    <style name="rateScreen">
+        <item name="android:textSize">12sp</item>
+        <item name="android:padding">2dp</item>
+    </style>
+
     <style name="keyboard_layout">
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_marginBottom">1dp</item>
