--- a/app/src/main/res/layout/keyboard_activity.xml
+++ b/app/src/main/res/layout/keyboard_activity.xml
@@ -43,7 +43,7 @@
                 style="@style/button_teal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{keyboard.onClickTaxMinus}"
                 android:text="TAX-" />
 
             <Button
@@ -51,7 +51,7 @@
                 style="@style/button_teal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{keyboard.onClickTaxPlus}"
                 android:text="TAX+" />
         </LinearLayout>
 
