--- a/app/src/main/res/layout/keyboard_activity.xml
+++ b/app/src/main/res/layout/keyboard_activity.xml
@@ -107,7 +107,7 @@
                 style="@style/button_indigo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{keyboard.onClickMemoryClear}"
                 android:text="MC" />
 
             <Button
@@ -115,7 +115,7 @@
                 style="@style/button_indigo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{keyboard.onClickMemoryRecall}"
                 android:text="MR" />
 
             <Button
@@ -123,7 +123,7 @@
                 style="@style/button_indigo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{keyboard.onClickMemorySubtract}"
                 android:text="M-" />
 
             <Button
@@ -131,7 +131,7 @@
                 style="@style/button_indigo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{keyboard.onClickMemoryAdd}"
                 android:text="M+" />
         </LinearLayout>
 
