--- a/app/src/main/res/layout/screen_activity.xml
+++ b/app/src/main/res/layout/screen_activity.xml
@@ -14,6 +14,10 @@
         <variable
             name="calculatorScreenHandler"
             type="ua.bios.mvvm.viewmodel.CalculatorScreenHandler" />
+
+        <variable
+            name="memoryScreenHandler"
+            type="ua.bios.mvvm.viewmodel.MemoryViewModel" />
     </data>
 
     <LinearLayout
@@ -35,14 +39,21 @@
                 style="@style/gtScreen"
                 android:layout_width="20dip"
                 android:layout_height="match_parent"
-                android:text="@{grandTotalScreen.activate ? @string/app_gt_screen : ``}" />
+                android:text="@{grandTotalScreen.activate ? @string/app_gt_sign : ``}" />
 
             <TextView
                 android:id="@+id/rateScreen"
                 style="@style/rateScreen"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@{@string/app_tax_rate + `(` + taxRateScreen.value +`)`}" />
+                android:text="@{@string/app_tax_rate_sign + `(` + taxRateScreen.value +`)`}" />
+
+                <TextView
+                    android:id="@+id/memoryScreen"
+                    style="@style/rateScreen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@{memoryScreenHandler.activate ? @string/app_memory_sign : ``}" />
             </LinearLayout>
 
             <ua.bios.display.CalculatorScreen
