--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="buttonColor">#FFFFFF</color>
     <color name="headerColor">#31409f</color>
+    <color name="aboutTextColor">#000000</color>
 </resources>
