--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#3f60b5</color>
     <color name="buttonColor">#FFFFFF</color>
     <color name="headerColor">#31409f</color>
     <color name="aboutTextColor">#000000</color>
