--- a/app/src/main/res/values/settings.xml
+++ b/app/src/main/res/values/settings.xml
@@ -7,9 +7,10 @@
     <string name="app_pref_vibration_settings">vibration_settings</string>
     <string name="app_pref_vibration_length_settings">vibration_length_settings</string>
 
-    <string name="app_pref_screen_font_color_settings">font_color_settings</string>
-    <string name="app_pref_screen_font_size_settings">font_size_settings</string>
+    <string name="app_pref_screen_font_color_settings">font_screen_color_settings</string>
+    <string name="app_pref_screen_font_color_default_value_settings">#000000</string>
+    <string name="app_pref_screen_font_size_settings">font_screen_size_settings</string>
     <string name="app_pref_screen_keep_on_settings">keep_screen_settings</string>
 
-    <string name="app_pref_keyboard_font_size_settings">font_size_settings</string>
+    <string name="app_pref_keyboard_font_size_settings">font_keyboard_size_settings</string>
 </resources>
