--- a/app/src/main/res/layout/keyboard_activity.xml
+++ b/app/src/main/res/layout/keyboard_activity.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
-            name="keyboard"
+            name="calculatorHandler"
             type="ua.bios.mvvm.viewmodel.CalculatorHandler" />
+
+        <variable
+            name="calculatorButton"
+            type="ua.bios.mvvm.viewmodel.ButtonViewModel" />
 
         <variable
             name="calculatorViewModel"
@@ -21,37 +26,41 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/gt"
                 style="@style/button_teal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clickable="@{calculatorViewModel.GTActivate}"
-                android:onClick="@{keyboard.onClickGrandTotal}"
+                android:onClick="@{calculatorHandler.onClickGrandTotal}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="GT" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/rate"
                 style="@style/button_teal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickRate}"
+                android:onClick="@{calculatorHandler.onClickRate}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="RATE" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/tax_minus"
                 style="@style/button_teal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickTaxMinus}"
+                android:onClick="@{calculatorHandler.onClickTaxMinus}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="TAX-" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/tax_plus"
                 style="@style/button_teal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickTaxPlus}"
+                android:onClick="@{calculatorHandler.onClickTaxPlus}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="TAX+" />
         </LinearLayout>
 
@@ -60,20 +69,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/percentage"
                 style="@style/button_blue_grey"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickPercentage}"
+                android:onClick="@{calculatorHandler.onClickPercentage}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="%" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/square_root"
                 style="@style/button_blue_grey"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickSquareRoot}"
+                android:onClick="@{calculatorHandler.onClickSquareRoot}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="√x" />
 
             <ImageButton
@@ -83,17 +94,18 @@
                 android:layout_height="match_parent"
                 android:contentDescription="backspace"
                 android:gravity="center"
-                android:onClick="@{keyboard.onClickBackspace}"
+                android:onClick="@{calculatorHandler.onClickBackspace}"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/backspace" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/reset"
                 style="@style/button_deep_orange"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickClear}"
+                android:onClick="@{calculatorHandler.onClickClear}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="C" />
         </LinearLayout>
 
@@ -102,36 +114,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/mc"
                 style="@style/button_indigo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickMemoryClear}"
+                android:onClick="@{calculatorHandler.onClickMemoryClear}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="MC" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/mr"
                 style="@style/button_indigo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickMemoryRecall}"
+                android:onClick="@{calculatorHandler.onClickMemoryRecall}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="MR" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/m_minus"
                 style="@style/button_indigo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickMemorySubtract}"
+                android:onClick="@{calculatorHandler.onClickMemorySubtract}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="M-" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/m_plus"
                 style="@style/button_indigo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickMemoryAdd}"
+                android:onClick="@{calculatorHandler.onClickMemoryAdd}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="M+" />
         </LinearLayout>
 
@@ -140,36 +156,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/seven"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="7" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/eight"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="8" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/nine"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="9" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/divide"
                 style="@style/button_blue_grey"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="÷" />
         </LinearLayout>
 
@@ -178,36 +198,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/four"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="4" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/five"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="5" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/six"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="6" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/multiply"
                 style="@style/button_blue_grey"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="×" />
         </LinearLayout>
 
@@ -216,37 +240,41 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/one"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="1" />
 
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/two"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="2" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/tree"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="3" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/subtract"
                 style="@style/button_blue_grey"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="-" />
         </LinearLayout>
 
@@ -255,36 +283,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/dot"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="." />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/zero"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="0" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/equal"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickEquals}"
+                android:onClick="@{calculatorHandler.onClickEquals}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="=" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/plus"
                 style="@style/button_blue_grey"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="+" />
         </LinearLayout>
 
@@ -293,36 +325,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/opposite"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickOpposite}"
+                android:onClick="@{calculatorHandler.onClickOpposite}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="+/-" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/double_zero"
                 style="@style/button_black"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="00" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/left_parenthesis"
                 style="@style/button_blue_grey"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text="(" />
 
-            <Button
+            <ua.bios.keyboard.CalculatorButton
                 android:id="@+id/right_parenthesis"
                 style="@style/button_blue_grey"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="@{keyboard.onClickButton}"
+                android:onClick="@{calculatorHandler.onClickButton}"
+                app:setFontSize="@{calculatorButton.fontSize}"
                 android:text=")" />
         </LinearLayout>
     </LinearLayout>
